<resources>
    <string name="app_name">Darts</string>
    <string name="action_settings">Settings</string>
    <string name="heading">Darts</string>
    <string name="playerText">Players:</string>
    <string name="gameText">Game:</string>
    <string name="start_button">Start</string>
    <string name="default_game">301</string>
    <string name="default_player_count">1</string>
    <string name="double_shot">Double</string>
    <string name="triple_shot">Triple</string>
    <string name="bull_shot">Bull</string>
    <string name="bulls_eye_shot">Bull´s Eye</string>
    <string name="check_shot">Accept</string>
    <string name="undo_inputs">Undo</string>
    <string name="shot_one_text">Shot 1:</string>
    <string name="shot_two_text">Shot 2:</string>
    <string name="shot_three_text">Shot 3:</string>
    <string name="total_text">Total:</string>
    <string name="quit_game">Quit Game</string>
    <string name="no">No</string>
    <string name="finished">FINISHED</string>
    <string name="finish_info_text">Skip to the stats</string>
</resources>
