<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="8dp"
        android:paddingRight="10dp">

        <LinearLayout
            android:id="@+id/playerOneField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/playerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="4dp"
                    android:text="Player1"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/playerOneBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_points"
                android:enabled="true"
                android:onClick="onPointCounterClicked"
                android:text="1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerOneHint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerOneHint2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerOneHint3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:text="-" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerTwoField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/playerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="4dp"
                    android:text="Player2"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/playerTwoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_points"
                android:enabled="false"
                android:onClick="onPointCounterClicked"
                android:text="1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerTwoHint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerTwoHint2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerTwoHint3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerThreeField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/playerThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="4dp"
                    android:text="Player3"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/playerThreeBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_points"
                android:enabled="false"
                android:onClick="onPointCounterClicked"
                android:text="1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerThreeHint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerThreeHint2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerThreeHint3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:text="-" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/playerFourField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/playerFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingTop="4dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="4dp"
                    android:text="Player4"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/playerFourBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/button_points"
                android:enabled="false"
                android:onClick="onPointCounterClicked"
                android:text="1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/playerFourHint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="right"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerFourHint2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="-" />

                <TextView
                    android:id="@+id/playerFourHint3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="4"
                    android:gravity="left"
                    android:text="-" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mainLayoutBot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_alignParentBottom="true" >

        <LinearLayout
            android:id="@+id/finishGameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:visibility="invisible" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:background="@drawable/button_primary"
                android:gravity="center_vertical|center_horizontal"
                android:onClick="finishGameWorldEarly"
                android:padding="6dp"
                android:text="Finish Game"
                android:textColor="#FFF"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="6dp"
                android:text="@string/finish_info_text"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Button Check and Clear -->
        <LinearLayout
            android:id="@+id/checkLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/undo_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_cancel"
                android:onClick="onUndoWorldScoreClicked"
                android:text="@string/undo_inputs"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/check_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@drawable/button_accept"
                android:hapticFeedbackEnabled="true"
                android:onClick="onAcceptWorldClicked"
                android:text="@string/check_shot"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

